refactor: normalize api route paths
